Update and rename README.md to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-
 Dr. Bo WANG's homepage
 
 个人简介：
 2010.04-2013.12 Télécom Bretagne 信息与通信科学技术专业 博士
 2004.09-2010.03 中国海洋大学 海洋信息探测与处理专业 硕博连读
 2000.09-2004.07 山东大学 计算机科学与技术专业 工学学士
+
+Courses:
+云计算技术与应用
